tests/paczka1/small_fuzzy/66407490.err
Error in line 6: TX4C3WMEf A382 46,0
Error in line 9: 1Qa9YQTAB A382 65,4
